--- a/README
+++ b/README
@@ -7,12 +7,16 @@ don't violate the license.
 ----->>> LOOK <<<-----
 READ THE MANUAL FIRST. IT'S IN POSTSCRIPT AND PDF FORMAT.
 
+VERY FREQUENTLY ASKED QUESTIONS:
+Q. How can I download this?
+A. Message me, and I shall provide!
+
 FREQUENTLY ASKED QUESTIONS:
 Q. What is this?
 A. It's a BL3 save editor.
 
 Q. Where can I download it for Windows?
-A. Right now, you have to compile it yourself on Cygwin or WSL.
+A. Right now, you have to compile it yourself on Cygwin or WSL. Or, ask me and I'll send you a binary.
 
 Q. How do I import items?
 A. You can't, well not yet at least. Coming soon (in 2 weeks or so).
