Addressed some more FAQs

--- a/README
+++ b/README
@@ -11,6 +11,9 @@ VERY FREQUENTLY ASKED QUESTIONS:
 Q. How can I download this?
 A. Message me, and I shall provide!
 
+Q. What's with all of the CSAV001xxxy format messages? Do you work at IBM or something?
+A. %FAQ_ANS_WRONGCPY Wrong company. 
+
 FREQUENTLY ASKED QUESTIONS:
 Q. What is this?
 A. It's a BL3 save editor.
