Added BSD Makefile and a Linux prebuilt binary folder

--- a/README
+++ b/README
@@ -9,10 +9,10 @@ READ THE MANUAL FIRST. IT'S IN POSTSCRIPT AND PDF FORMAT.
 
 VERY FREQUENTLY ASKED QUESTIONS:
 Q. How can I download this?
-A. Message me, and I shall provide!
+A. Look in the BUILDS directory.
 
 Q. What's with all of the CSAV001xxxy format messages? Do you work at IBM or something?
-A. %FAQ_ANS_WRONGCPY Wrong company. 
+A. %FAQ_ANS_WRGCPY Wrong company. No, I don't work at DEC either. 
 
 FREQUENTLY ASKED QUESTIONS:
 Q. What is this?
