Updated documentation and removed precompiled binaries.

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ READ THE MANUAL FIRST. IT'S IN POSTSCRIPT AND PDF FORMAT.
 
 VERY FREQUENTLY ASKED QUESTIONS:
 Q. How can I download this?
-A. Look in the BUILDS directory.
+A. Message me on Discord.
 
 Q. What's with all of the CSAV001xxxy format messages? Do you work at IBM or something?
 A. %FAQ_ANS_WRGCPY Wrong company. No, I don't work at DEC either. 
