--- a/README
+++ b/README
@@ -13,36 +13,28 @@ A. Download a binary for your machine from the build_win64/linux64/bsd64 folder.
 
 Q. What's with all of the CSAV001xxxy format messages? Do you work at IBM or something?
 A. %FAQ_ANS_WRGCPY Wrong company. No, I don't work at DEC either. 
+   It has to do with the history of CSave. Open the manual and scroll down to the bottom if you're curious.
 
 FREQUENTLY ASKED QUESTIONS:
 Q. What is this?
 A. It's a BL3 save editor.
 
 Q. Where can I download it for Windows?
-A. Right now, you have to compile it yourself on Cygwin or WSL. Or, ask me and I'll send you a binary.
+A. The build_win64 folder.
 
 Q. How do I import items?
-A. You can't, well not yet at least. Coming soon (in 2 weeks or so).
-
-Q. What is this even useful for?
-A. Editing save files in batch mode.
-
-Q. What is batch mode?
-A. Running something without looking at it run.
+A. You can't, well not yet at least. I am currently re-working the code to make it more reliable.
 
 Q. Does it have a point-and-click GUI?
-A. Sorry, no. Command-line only.
-
-Q. I want to install it but I don't know how to compile it. Can you help me?
-A. Yes.
+A. Sorry, no. Command-line only. However, there is a ncurses-based "GUI" and it's CSaveGUI.
 
 Q. How can I contact you?
-A. HackerSmacker#8496 on Discord, HKRSMKR@VMSYS2 on HSNET/BITNET, and VAXSVR::HKRSMKR on HSNET/DECnet.
-
+A. File a bug report if it's bad, or message HackerSmacker#8496 on Discord.
 
 ---- VERY IMPORTANT, IF YOU DON'T READ ANYTHING ELSE READ THIS: ----
 Open and read manual.pdf!
 Print the manual: 
   lpr -P printername manual.ps (BSD/Linux)
   lp -d printername manual.ps (System V)
-  PRINT /QUEUE=printername MANUAL.PS (OpenVMS)
+  print /queue=printername manual.ps (OpenVMS)
+  print /D:printername manual.pdf (Windows)
